<resources>
    <string name="app_name">ElissaGunawan_00000027328_IF633_BL_UTS</string>
    <string name="login">Login</string>
    <string name="profil">Profil</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masukkan username</string>
    <string name="pwd">Masukkan password</string>
    <string name="title_activity_music">MusicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="NIM">NIM : 00000027328</string>
    <string name="nama">Nama : Elissa Gunawan</string>
    <string name="kelas">Kelas : BL</string>
    <string name="ref">Referensi :</string>
    <string name="referensi">Google : https://www.11zon.com/android/android_mediaplayer.php</string>
    <string name="logout">Logout</string>
    <string name="listlagu">List Lagu</string>
</resources>